top down parse attribute framework